--- a/day-4-5-6.ipynb
+++ b/day-4-5-6.ipynb
@@ -557,9 +557,311 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76d8e7c0",
+   "metadata": {},
+   "source": [
+    "# Day 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64a016c3",
+   "metadata": {},
+   "source": [
+    "### In-class Task:\n",
+    "\n",
+    "Write a program to check the input $x$:\n",
+    "\n",
+    "If $x$ is an even number, print \"A\"\n",
+    "\n",
+    "But if $x$ is an even number that is not divisible by 3, print \"B\" instead, and print \"C\" instead if yes.\n",
+    "\n",
+    "Instead, if $x$ is not an even number, print \"D\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20e26bb5",
+   "metadata": {},
+   "source": [
+    "Test cases:\n",
+    "\n",
+    "$x=3$ -> D\n",
+    "\n",
+    "$x=4$ -> B\n",
+    "\n",
+    "$x=12$ -> C\n",
+    "\n",
+    "$x=182$ -> B\n",
+    "\n",
+    "$x=0$ -> C\n",
+    "\n",
+    "$x=-7$ -> D\n",
+    "\n",
+    "$x=1.5$ -> D\n",
+    "\n",
+    "$x=2.2$ -> D\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "be629343",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = float(input())\n",
+    "\n",
+    "if x % 2 == 0:\n",
+    "    if x % 3 != 0:\n",
+    "        print(\"B\")\n",
+    "    else:\n",
+    "        print(\"C\")\n",
+    "else:\n",
+    "    print(\"D\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43bf80dd",
+   "metadata": {},
+   "source": [
+    "## Final Project "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20b69a8",
+   "metadata": {},
+   "source": [
+    "Utility App\n",
+    "\n",
+    "\n",
+    "> income-spending, calculator, journal, reminders, shopping list, \n",
+    "> invesment calculator, Recommendations, Scientific App (Physics, Chem.)\n",
+    "> poker game"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77037d4e",
+   "metadata": {},
+   "source": [
+    "NO try-catch, NO OOP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "800af758",
+   "metadata": {},
+   "source": [
+    "Present on Friday 38th October 2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7eff913",
+   "metadata": {},
+   "source": [
+    "Scoring 30%\n",
+    "\n",
+    "15% Functions & Features\n",
+    "\n",
+    "10% Code Readibility & PEP8 Format & Variable Names \n",
+    "\n",
+    "5% Presentation\n",
+    "\n",
+    "Bug -2%\n",
+    "PEP8 format -0.2%\n",
+    "Code Defense -0 ~ -30%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eec8bce8",
+   "metadata": {},
+   "source": [
+    "Codeforces 30%\n",
+    "\n",
+    "Defence -0 ~ -30%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b824f178",
+   "metadata": {},
+   "source": [
+    "### Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b431f5b",
+   "metadata": {},
+   "source": [
+    "While loop\n",
+    "\n",
+    "```python\n",
+    "while CONDITION:\n",
+    "    ACTION\n",
+    "```\n",
+    "\n",
+    "\n",
+    "For loop\n",
+    "```python\n",
+    "for INDEX in ITERABLE:\n",
+    "    ACTION\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f54ff637",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print('Hello, World!')\n",
+    "# print('Hello, World!')\n",
+    "# print('Hello, World!')\n",
+    "# print('Hello, World!')\n",
+    "# print('Hello, World!')\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print('Hello, World!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa4e540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while 2 < 3:\n",
+    "    print(\"A\")\n",
+    "    print(\"B\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "234779f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print 1 to 100\n",
+    "\n",
+    "number = 1\n",
+    "while number < 101:\n",
+    "    print(number)\n",
+    "    number += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7e7db55",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d7d04493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Even Number from 1 to 20\n",
+    "\n",
+    "number = 2\n",
+    "while number <= 20:\n",
+    "    print(number)\n",
+    "    number += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a59cc0b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 1\n",
+    "while number <= 20:\n",
+    "    if number % 2 == 0:\n",
+    "        print(number)\n",
+    "    number += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1960fe3d",
+   "metadata": {},
+   "source": [
+    "# Day 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "534431c7",
    "metadata": {},
    "outputs": [],
    "source": []
