--- a/day-4-5-6.ipynb
+++ b/day-4-5-6.ipynb
@@ -859,9 +859,422 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5aa93bb4",
+   "metadata": {},
+   "source": [
+    "break"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534431c7",
+   "id": "568191bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 1\n",
+    "while True:\n",
+    "    if number % 6 == 0:\n",
+    "        break\n",
+    "    print(number)\n",
+    "    number += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff729b4",
+   "metadata": {},
+   "source": [
+    "continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ff92b29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m number < \u001b[32m10\u001b[39m:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m number % \u001b[32m2\u001b[39m == \u001b[32m0\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(number)\n\u001b[32m      6\u001b[39m     number += \u001b[32m1\u001b[39m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "number = 1\n",
+    "while number < 10:\n",
+    "    if number % 2 == 0:\n",
+    "        continue\n",
+    "    print(number)\n",
+    "    number += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98f578ea",
+   "metadata": {},
+   "source": [
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a9f922a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 1\n",
+    "while number < 10:\n",
+    "    if number % 2 == 0:\n",
+    "        pass\n",
+    "    print(number)\n",
+    "    number += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6708fd9a",
+   "metadata": {},
+   "source": [
+    "## For loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e222b2a2",
+   "metadata": {},
+   "source": [
+    "range(start, stop, step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "440edbe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range(6) # 0,1,2,3,4,5\n",
+    "range(10) # 0,1,2,3,4,...,9\n",
+    "range(1) # 0\n",
+    "range(0) # Nothing\n",
+    "range(-5) # Nothing\n",
+    "\n",
+    "range(1, 10) # 1,2,3,...,9\n",
+    "range(5, 8) # 5,6,7\n",
+    "range(-1, 5) # -1, 0, 1, 2, 3, 4\n",
+    "\n",
+    "range(1, 10, 2) # 1, 3, 5, 7, 9\n",
+    "range(-3, 6, 3) # -3, 0, 3\n",
+    "range(10, -2, -2) # 10, 8, 6, 4, 2, 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5ab05c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in range(5):\n",
+    "    print(index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d46cf16",
+   "metadata": {},
+   "source": [
+    "Print even number from 10 to 0, inclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7629d3eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "6\n",
+      "4\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10, -1, -1):\n",
+    "    if number % 2 == 0:\n",
+    "        print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3a2783e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "6\n",
+      "4\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10, -1, -2):\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f43ada5",
+   "metadata": {},
+   "source": [
+    "$1^2+2^2+3^2+...+n^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e8e851b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input())\n",
+    "sum_of_squares = 0\n",
+    "for index in range(1, number+1):\n",
+    "    sum_of_squares += index ** 2\n",
+    "print(sum_of_squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f56069f",
+   "metadata": {},
+   "source": [
+    "$O(n)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ba8be12",
+   "metadata": {},
+   "source": [
+    "$1^2+2^2+3^2+...+n^2=\\frac{n(n+1)(2n+1)}{6}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9e35398",
+   "metadata": {},
+   "source": [
+    "O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c1707730",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input())\n",
+    "result = number * (number + 1) * (2 * number + 1) // 6\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce15b75f",
+   "metadata": {},
+   "source": [
+    "## Nested Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b0e14c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    for i in range(10):\n",
+    "        while True:\n",
+    "            if True:\n",
+    "                pass\n",
+    "            elif True:\n",
+    "                pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "906190bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "0 3\n",
+      "1 0\n",
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "2 0\n",
+      "2 1\n",
+      "2 2\n",
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for first_number in range(3): # 0-2\n",
+    "    for second_number in range(4): # 0-3\n",
+    "        print(first_number, second_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1502933e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n",
+      "2 4\n",
+      "3 2\n",
+      "3 4\n",
+      "4 2\n",
+      "4 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, 5): # 2,3,4\n",
+    "    for j in range(2, 6, 2): # 2,4\n",
+    "        print(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "051ba8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n",
+      "3 3\n",
+      "4 1\n",
+      "5 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 2\n",
+    "while i < 5:\n",
+    "    for j in range(1, 5, 2): # 1,3\n",
+    "        print(i, j)\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d98fc3e",
    "metadata": {},
    "outputs": [],
    "source": []
