--- a/day-7-string.ipynb
+++ b/day-7-string.ipynb
@@ -379,12 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "b1b7a457",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In methods_string.py file\n"
+    "# In methods_string.py file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fecb04f6",
+   "metadata": {},
+   "source": [
+    "1. Count how many \"never gonna\"/\"Never gonna\" appears \n",
+    "2. Remove the section separator, such as [Intro], [Verse1], etc...\n",
+    "3. How many lines of lyrics, after doing 2., are there?\n",
+    "4. How many number of alphabets are there in the lyrics?"
    ]
   },
   {
@@ -394,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[Intro]\n",
+    "lyrics = \"\"\"[Intro]\n",
     "Desert you\n",
     "Ooh-ooh-ooh-ooh\n",
     "Hurt you\n",
@@ -476,7 +487,7 @@
     "Never gonna run around and desert you\n",
     "Never gonna make you cry\n",
     "Never gonna say goodbye\n",
-    "Never gonna tell a lie and hurt you"
+    "Never gonna tell a lie and hurt you\"\"\""
    ]
   },
   {
@@ -485,7 +496,10 @@
    "id": "2380d59a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# count \"never gonna\"\n",
+    "print(lyrics)"
+   ]
   }
  ],
  "metadata": {
