--- a/day-7-string.ipynb
+++ b/day-7-string.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cb93350c",
    "metadata": {},
    "outputs": [],
@@ -492,14 +492,447 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2380d59a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "# count \"never gonna\"\n",
+    "print(lyrics.lower().count('never gonna'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d551951e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Desert you\n",
+      "Ooh-ooh-ooh-ooh\n",
+      "Hurt you\n",
+      "\n",
+      "\n",
+      "We're no strangers to love\n",
+      "You know the rules and so do I (Do I)\n",
+      "A full commitment's what I'm thinking of\n",
+      "You wouldn't get this from any other guy\n",
+      "\n",
+      "\n",
+      "I just wanna tell you how I'm feeling\n",
+      "Gotta make you understand\n",
+      "\n",
+      "\n",
+      "Never gonna give you up\n",
+      "Never gonna let you down\n",
+      "Never gonna run around and desert you\n",
+      "Never gonna make you cry\n",
+      "Never gonna say goodbye\n",
+      "Never gonna tell a lie and hurt you\n",
+      "\n",
+      "\n",
+      "We've known each other for so long\n",
+      "Your heart's been aching, but you're too shy to say it (To say it)\n",
+      "Inside, we both know what's been going on (Going on)\n",
+      "We know the game, and we're gonna play it\n",
+      "\n",
+      "\n",
+      "And if you ask me how I'm feeling\n",
+      "Don't tell me you're too blind to see\n",
+      "\n",
+      "\n",
+      "Never gonna give you up\n",
+      "Never gonna let you down\n",
+      "Never gonna run around and desert you\n",
+      "Never gonna make you cry\n",
+      "Never gonna say goodbye\n",
+      "Never gonna tell a lie and hurt you\n",
+      "Never gonna give you up\n",
+      "Never gonna let you down\n",
+      "Never gonna run around and desert you\n",
+      "Never gonna make you cry\n",
+      "Never gonna say goodbye\n",
+      "Never gonna tell a lie and hurt you\n",
+      "\n",
+      "\n",
+      "Ooh (Give you up)\n",
+      "Ooh-ooh (Give you up)\n",
+      "Ooh-ooh\n",
+      "Never gonna give, never gonna give (Give you up)\n",
+      "Ooh-ooh\n",
+      "Never gonna give, never gonna give (Give you up)\n",
+      "\n",
+      "We've known each other for so long\n",
+      "Your heart's been aching, but you're too shy to say it (To say it)\n",
+      "Inside, we both know what's been going on (Going on)\n",
+      "We know the game, and we're gonna play it\n",
+      "\n",
+      "\n",
+      "I just wanna tell you how I'm feeling\n",
+      "Gotta make you understand\n",
+      "\n",
+      "\n",
+      "Never gonna give you up\n",
+      "Never gonna let you down\n",
+      "Never gonna run around and desert you\n",
+      "Never gonna make you cry\n",
+      "Never gonna say goodbye\n",
+      "Never gonna tell a lie and hurt you\n",
+      "Never gonna give you up\n",
+      "Never gonna let you down\n",
+      "Never gonna run around and desert you\n",
+      "Never gonna make you cry\n",
+      "Never gonna say goodbye\n",
+      "Never gonna tell a lie and hurt you\n",
+      "Never gonna give you up\n",
+      "Never gonna let you down\n",
+      "Never gonna run around and desert you\n",
+      "Never gonna make you cry\n",
+      "Never gonna say goodbye\n",
+      "Never gonna tell a lie and hurt you\n"
+     ]
+    }
+   ],
+   "source": [
+    "lyrics = lyrics.replace('[Intro]', '') # in-place replacement\n",
+    "lyrics = lyrics.replace('[Verse 1]', '') \n",
+    "lyrics = lyrics.replace('[Pre-Chorus]', '') \n",
+    "lyrics = lyrics.replace('[Chorus]', '') \n",
+    "lyrics = lyrics.replace('[Verse 2]', '') \n",
+    "lyrics = lyrics.replace('[Pre-Chorus]', '') \n",
+    "lyrics = lyrics.replace('[Bridge]', '') \n",
+    "lyrics = lyrics.replace('[Verse 3]', '') \n",
     "print(lyrics)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "529d0a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lyrics.count('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e849744b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nDesert you\\nOoh-ooh-ooh-ooh\\nHurt you\\n\\n\\nWe're no strangers to love\\nYou know the rules and so do I (Do I)\\nA full commitment's what I'm thinking of\\nYou wouldn't get this from any other guy\\n\\n\\nI just wanna tell you how I'm feeling\\nGotta make you understand\\n\\n\\nNever gonna give you up\\nNever gonna let you down\\nNever gonna run around and desert you\\nNever gonna make you cry\\nNever gonna say goodbye\\nNever gonna tell a lie and hurt you\\n\\n\\nWe've known each other for so long\\nYour heart's been aching, but you're too shy to say it (To say it)\\nInside, we both know what's been going on (Going on)\\nWe know the game, and we're gonna play it\\n\\n\\nAnd if you ask me how I'm feeling\\nDon't tell me you're too blind to see\\n\\n\\nNever gonna give you up\\nNever gonna let you down\\nNever gonna run around and desert you\\nNever gonna make you cry\\nNever gonna say goodbye\\nNever gonna tell a lie and hurt you\\nNever gonna give you up\\nNever gonna let you down\\nNever gonna run around and desert you\\nNever gonna make you cry\\nNever gonna say goodbye\\nNever gonna tell a lie and hurt you\\n\\n\\nOoh (Give you up)\\nOoh-ooh (Give you up)\\nOoh-ooh\\nNever gonna give, never gonna give (Give you up)\\nOoh-ooh\\nNever gonna give, never gonna give (Give you up)\\n\\nWe've known each other for so long\\nYour heart's been aching, but you're too shy to say it (To say it)\\nInside, we both know what's been going on (Going on)\\nWe know the game, and we're gonna play it\\n\\n\\nI just wanna tell you how I'm feeling\\nGotta make you understand\\n\\n\\nNever gonna give you up\\nNever gonna let you down\\nNever gonna run around and desert you\\nNever gonna make you cry\\nNever gonna say goodbye\\nNever gonna tell a lie and hurt you\\nNever gonna give you up\\nNever gonna let you down\\nNever gonna run around and desert you\\nNever gonna make you cry\\nNever gonna say goodbye\\nNever gonna tell a lie and hurt you\\nNever gonna give you up\\nNever gonna let you down\\nNever gonna run around and desert you\\nNever gonna make you cry\\nNever gonna say goodbye\\nNever gonna tell a lie and hurt you\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lyrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a61bc777",
+   "metadata": {},
+   "source": [
+    "### in/not in Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5d991ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"I love Bangkok!\"\n",
+    "print(\"l\" in sentence)\n",
+    "print(\" \" in sentence)\n",
+    "print(\"\" in sentence)\n",
+    "print(\"ok!\" in sentence)\n",
+    "print(\" e\" in sentence)\n",
+    "print(\" e\" not in sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8b1c4e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"I love Bangkok!\"\n",
+    "\n",
+    "if \"l\" in sentence:\n",
+    "    print(\"A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b60210da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"I love Bangkok!\"\n",
+    "\n",
+    "if (\" \" not in sentence) or (sentence[4] == \"v\"):\n",
+    "    print(\"HELLO\")\n",
+    "else:\n",
+    "    print(\"WORLD!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca9d5324",
+   "metadata": {},
+   "source": [
+    "### Loop through String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "255bb2d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in range(5):\n",
+    "    print(index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77515101",
+   "metadata": {},
+   "source": [
+    "Loop by element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b109576f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"I love Bangkok!\"\n",
+    "\n",
+    "count = 0\n",
+    "for character in sentence:\n",
+    "    if character.islower():\n",
+    "        count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d832a3",
+   "metadata": {},
+   "source": [
+    "Loop by index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0ddc0a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 I\n",
+      "1  \n",
+      "2 l\n",
+      "3 o\n",
+      "4 v\n",
+      "5 e\n",
+      "6  \n",
+      "7 B\n",
+      "8 a\n",
+      "9 n\n",
+      "10 g\n",
+      "11 k\n",
+      "12 o\n",
+      "13 k\n",
+      "14 !\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"I love Bangkok!\"\n",
+    "\n",
+    "for index in range(len(sentence)):\n",
+    "    print(index, sentence[index])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5eec20c",
+   "metadata": {},
+   "source": [
+    "Enumerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ebdea024",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "0 I\n",
+      "1  \n",
+      "2 l\n",
+      "3 o\n",
+      "4 v\n",
+      "5 e\n",
+      "6  \n",
+      "7 B\n",
+      "8 a\n",
+      "9 n\n",
+      "10 g\n",
+      "11 k\n",
+      "12 o\n",
+      "13 k\n",
+      "14 !\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"I love Bangkok!\"\n",
+    "\n",
+    "for character in sentence:\n",
+    "    print(\"Hello\")\n",
+    "\n",
+    "for index, element in enumerate(sentence):\n",
+    "    print(index, element)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "04858da7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4375289048 4375289048\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 2\n",
+    "print(id(a), id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08995421",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
